--- a/src/index.css
+++ b/src/index.css
@@ -155,6 +155,7 @@ header a:hover {
 /*** VAN PAGES ***/
 .van-list-container {
   padding-inline: 23px;
+  margin-bottom: 16px;
 }
 
 .van-list {
@@ -550,4 +551,15 @@ footer {
     justify-content: flex-start;
     gap: 20px;
   }
+}
+
+.not-found-container {
+  padding-inline: 26px;
+  margin-bottom: 26px;
+}
+
+.not-found-container .link-button {
+  width: 100%;
+  background-color: #161616;
+  color: white;
 }
