--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body::-webkit-scrollbar {
 body {
   -ms-overflow-style: none;
   scrollbar-width: none;
+  /* position: relative; */
 }
 
 .site-wrapper {
@@ -533,4 +534,52 @@ i[class*="van-type-"] {
   margin-top: 22px;
   color: white;
   font-family: "Inter", sans-serif;
+}
+
+.red {
+  color: #cc0000;
+}
+
+.red {
+  color: red;
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+/* .fade-out {
+  opacity: 1;
+  animation: fadeOut 3s ease-in-out forwards;
+} */
+.popup {
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: hsla(0, 100%, 50%, 0.988);
+  color: white;
+  padding: 8px 16px;
+  border-radius: 4px;
+  font-size: 12px;
+  z-index: 1000;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  animation: fadeOut 5s ease-out forwards;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  80% {
+    opacity: 0.4;
+  }
+  95% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 0;
+  }
 }
